refactor: remove pom.xml and English homework PDF project files, streamline Kira application structure, and enhance database schema with new event handling features